加入显示天气信息的功能。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">SunnyWeather</string>
     <string name="search_place_hint">输入地址</string>
     <string name="search_no_result">未能查询到任何地点</string>
+    <string name="life_index">生活指数</string>
+    <string name="cold_risk">感冒</string>
+    <string name="dressing">穿衣</string>
+    <string name="ultraviolet">实时紫外线</string>
+    <string name="carwashing">洗车</string>
+    <string name="forecast">预报</string>
 </resources>
